--- a/index_univ.html
+++ b/index_univ.html
@@ -91,7 +91,7 @@
                     <td></td>
                     <td>참여신청서 - 목록 없음</td>
                     <td>UI_ADHPCbM01</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM01.html" target="_blank">PC</a>
@@ -106,7 +106,7 @@
                     <td></td>
                     <td>참여신청서 - 목록 있음</td>
                     <td>UI_ADHPCbM02</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM02.html" target="_blank">PC</a>
@@ -121,7 +121,7 @@
                     <td></td>
                     <td>참여신청서 - 이전정보 팝업</td>
                     <td>UI_ADHPCbP03</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbP03.html" target="_blank">PC</a>
@@ -136,7 +136,7 @@
                     <td></td>
                     <td>참여신청서 - 등록</td>
                     <td>UI_ADHPCbS04</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS04-1.html" target="_blank">PC-1</a>
@@ -152,7 +152,7 @@
                     <td></td>
                     <td>참여 신청서 - 등록 제출완료</td>
                     <td>UI_ADHPCbS05</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS05.html" target="_blank">PC</a>
@@ -167,7 +167,7 @@
                     <td></td>
                     <td>참여신청서 - 조회_제출</td>
                     <td>UI_ADHPCbS06</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS06.html" target="_blank">PC</a>
@@ -182,7 +182,7 @@
                     <td></td>
                     <td>참여신청서 - 조회_불인정</td>
                     <td>UI_ADHPCbS07</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS07.html" target="_blank">PC</a>
@@ -197,7 +197,7 @@
                     <td></td>
                     <td>참여신청서 - 회수_수정</td>
                     <td>UI_ADHPCbS08</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS08.html" target="_blank">PC</a>
@@ -212,7 +212,7 @@
                     <td>참여신청서(빌드업)</td>
                     <td>빌드업 - 참여신청서 조회</td>
                     <td>UI_ADHPCbM09</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM09.html" target="_blank">PC</a>
