--- a/pc/UI_ADHPCbM01.html
+++ b/pc/UI_ADHPCbM01.html
@@ -74,9 +74,8 @@
                                         <div class="pa_page_empty mt80">
                                             <figure class="mb24"><img src="./include/images/ico60_warning_navy.svg"></figure>
                                             <p class="t3_sb">작성하신 대학 재학생 맞춤형 고용서비스<br>참여신청서가 없습니다.</p>
-                                            <div class="box_btn_wrap mt40">
-                                                <a href="" class="btn big type02 btn_s_r">이전</a>
-                                                <a href="" class="btn big type01 fill">신청서 작성</a>
+                                            <div class="box_btn_wrap mt40 flex_js_r">
+                                                <button type="button" class="btn big type01 fill"><span>참여신청서 작성</span></button>
                                             </div>                                  
                                         </div>
 
