--- a/pc/UI_ADHPCbS05.html
+++ b/pc/UI_ADHPCbS05.html
@@ -52,20 +52,14 @@
                             <div class="tab_wrap bg_type" data-role="tab">
                                 <div class="mypage">
                                     <div class="progmg allcare">
-                                        <ul class="tab_title topTab" role="tablist">
-                                            <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>참여신청서</span></button></li>
-                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여 프로그램</span></button></li>
-                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>상담 이력</span></button></li>
-                                            <!-- D: 활성화시 class[active] add -->
-                                        </ul>
 
-                                        <div class="donepage">
+                                        <div class="donepage mt120">
                                             <div class="done_notice">
                                                 <figure class="mb24"><img src="./images/mypage/ico80_chk_green.svg"></figure>
                                                 <p class="h2_sb">참여신청서 제출이 완료되었습니다.</p>
                                             </div>
 
-                                            <ul class="done_info mt80">
+                                            <ul class="done_info mt40">
                                                 <li>
                                                     <div class="tit"><p>참여 대학</p></div>
                                                     <div class="desc"><p>AAA 대학교</p></div>
