--- a/pc/UI_ADHPCbS07.html
+++ b/pc/UI_ADHPCbS07.html
@@ -53,16 +53,16 @@
                                     <div class="progmg allcare">
                                         <div class="my_ptcp_from">
 
-                                            <div class="box_group_wrap mt16">
+                                            <div class="box_group_wrap mt40">
                                                 <h3 class="t2_sb">참여자 정보</h3>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
                                                         <caption>성명, 전화번호, 이메일, 주소 을(를) 제공하는 표</caption>
                                                         <colgroup>
                                                             <col style="width:20%">
-                                                            <col style="width:30%">
+                                                            <col style="width:auto">
                                                             <col style="width:20%">
-                                                            <col style="width:30%">
+                                                            <col style="width:auto">
                                                         </colgroup>
                                                         <tbody>
                                                             <tr>
