--- a/pc/UI_ADHPCdS07.html
+++ b/pc/UI_ADHPCdS07.html
@@ -159,7 +159,7 @@
 
                                             <div class="box_group_wrap box_check_wrap">
                                                 <h3 class="t2_sb"><span class="txt_blue">입력값 1</span> 단기계획 및 중장기 계획</h3>
-                                                <div class="box_table_wrap mt8">
+                                                <div class="box_table_wrap">
                                                     <table class="box_table">
                                                         <caption>구분 / 활동시기 / 목표활동 을(를) 제공하는 표</caption>
                                                         <colgroup>
@@ -215,7 +215,7 @@
 
                                             <div class="box_group_wrap box_check_wrap">
                                                 <h3 class="t2_sb"><span class="txt_blue">입력값 2</span> 단기계획 및 중장기 계획</h3>
-                                                <div class="box_table_wrap mt8">
+                                                <div class="box_table_wrap">
                                                     <table class="box_table">
                                                         <caption>구분 / 활동시기 / 목표활동 을(를) 제공하는 표</caption>
                                                         <colgroup>
@@ -259,7 +259,7 @@
 
                                             <div class="box_group_wrap box_check_wrap">
                                                 <h3 class="t2_sb"><span class="txt_blue">입력값 3</span> 단기계획 및 중장기 계획</h3>
-                                                <div class="box_table_wrap mt8">
+                                                <div class="box_table_wrap">
                                                     <table class="box_table">
                                                         <caption>구분 / 활동시기 / 목표활동 을(를) 제공하는 표</caption>
                                                         <colgroup>
