--- a/pc/UI_ADHPCdS06.html
+++ b/pc/UI_ADHPCdS06.html
@@ -216,7 +216,7 @@
 
                                             <div class="box_group_wrap box_jobplan_wrap">
                                                 <h3 class="t2_sb"><span class="txt_blue">{희망 직업 1}</span> 단기계획 및 중장기 계획</h3>
-                                                <div class="box_table_wrap mt8">
+                                                <div class="box_table_wrap">
                                                     <table class="box_table">
                                                         <caption>단기 계획의 구분, 활동시기, 목표활동, 시행기관, 관리 을(를) 제공하는 표</caption>
                                                         <colgroup>
@@ -316,7 +316,7 @@
                                                         </tbody>
                                                     </table>
                                                 </div>
-                                                <div class="box_table_wrap mt8">
+                                                <div class="box_table_wrap">
                                                     <table class="box_table">
                                                         <caption>중장기 계획의 구분, 목표일정, 목표내용, 관리 을(를) 제공하는 표</caption>
                                                         <colgroup>
@@ -391,7 +391,7 @@
                                             
                                             <div class="box_group_wrap box_jobplan_wrap">
                                                 <h3 class="t2_sb"><span class="txt_blue">{희망 직업 2}</span> 단기계획 및 중장기 계획</h3>
-                                                <div class="box_table_wrap mt8">
+                                                <div class="box_table_wrap">
                                                     <table class="box_table">
                                                         <caption>단기 계획의 구분, 활동시기, 목표활동, 시행기관, 관리 을(를) 제공하는 표</caption>
                                                         <colgroup>
@@ -492,7 +492,7 @@
                                                     </table>
                                                     
                                                 </div>
-                                                <div class="box_table_wrap mt8">
+                                                <div class="box_table_wrap">
                                                     <table class="box_table">
                                                         <caption>중장기 계획의 구분, 목표일정, 목표내용, 관리 을(를) 제공하는 표</caption>
                                                         <colgroup>
