--- a/pc/UI_ADHPCbM02.html
+++ b/pc/UI_ADHPCbM02.html
@@ -68,7 +68,7 @@
                                 <div class="mypage">
                                     <div class="progmg allcare">
 
-                                        <div class="box_notice_wrap mt8">
+                                        <div class="box_notice_wrap">
                                             <p class="tit">안내</p>
                                             <ul class="box_list_area">
                                                 <li class="txt_list">목록 내 <span class="fw600">상세조회버튼</span>을 선택하시면 참여신청서를 조회하실 수 있습니다.</li>
