--- a/pc/UI_ADHPCbM09.html
+++ b/pc/UI_ADHPCbM09.html
@@ -201,7 +201,7 @@
                                             </div>
 
                                             <div class="box_group_wrap">
-                                                <h3 class="t2_sb hreq_mark">개인정보 수집·이용·제공에 대한 동의서</h3>
+                                                <h3 class="t2_sb">개인정보 수집·이용·제공에 대한 동의서</h3>
                                                 <div class="agm_area">
                                                     <div class="agm_box">
                                                         <div class="agm_desc">
